# RoboticArm

./: Cargo.toml  README.md  test.py
src/: arm.rs  main.rs
