[package]
name = "RoboticArm"
version = "0.1.0"
authors = ["XLor <yjl9903@vip.qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.0"
actix-web = "3"
actix-cors = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
time = "0.1"
